--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 url: "hanchaozhang.xyz "
 # baseurl: /Hanchao-Zhang.github.io
 # Basic Information 
-title: Yiyang Zhou
+title: Chenhang Cui 
 # subtitle:
-position: Master of Computer Science and Technology
+position: Bachelor of Computer Science and Technology undergraduate
 # subposition: Chair of the Chinese Student and Scholar Association (CSSA)
 # subposition_link: https://nyu-medicine-cssa.github.io
-affiliation: Xi'an Jiaotong University
+affiliation: University of Electronic Science and Technology of China
 # subaffiliation: Grossman School of Medicine  
-affiliation_link: https://www.xjtu.edu.cn/
+affiliation_link: https://en.uestc.edu.cn/
 # subaffiliation_link: https://med.nyu.edu/research/vilcek-institute-graduate-biomedical-sciences/
-email: zhouyiyangailab@gmail.com
-address: Hangzhou, China
+email: chenhangcui@gmail.com
+address: Chengdu, China
 # address_link: https://goo.gl/maps/aQZfmiKjQmqbDsVY9
 
 
