--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-url: "hanchaozhang.xyz "
-# baseurl: /Hanchao-Zhang.github.io
-# Basic Information 
+url: "ChenhangCui.xyz "
+
 title: Chenhang Cui 
 # subtitle:
 position: Bachelor of Computer Science and Technology undergraduate
@@ -24,11 +23,11 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com.hk/citations?user=6KltFMAAAAAJ&hl=zh-CN
+google_scholar:https://scholar.google.com/citations?hl=zh-CN&user=V5X1gdAAAAAJ
 cv_link: assets/files/HanchaoZhangCV.pdf
-github_link: https://github.com/YiyangZhou
+github_link: https://github.com/ 
 # linkedin: https://www.linkedin.com/in/hanchao-ted-zhang-670105b7/?locale=en_US
-twitter: https://twitter.com/AiYiyangZ
+twitter: https://twitter.com/ 
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
