--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=V5X1gdAAAAAJ
 cv_link: assets/files/CV_cch.pdf
 github_link: https://github.com/ 
 # linkedin: https://www.linkedin.com/in/hanchao-ted-zhang-670105b7/?locale=en_US
-twitter: https://twitter.com/ 
+twitter: https://twitter.com/cuichenhang
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
